...
    operator = Color(0xFF56b6c2),   // 青色
    punctuation = Color(0xFFabb2bf), // 浅灰色
    className = Color(0xFFe5c07b),  // 黄色
    property = Color(0xFFe06c75),   // 红色
    boolean = Color(0xFFd19a66),    // 橙色
    variable = Color(0xFFe06c75),   // 红色
    tag = Color(0xFFe06c75),        // 红色
    attrName = Color(0xFFd19a66),   // 橙色
    attrValue = Color(0xFF98c379),  // 绿色
    fallback = Color(0xFFabb2bf)    // 浅灰色
)

// Atom One Light Theme Colors
...
